[tool.poetry]
name = "pa3"
version = "0.1.0"
description = ""
authors = ["Egor Gorbunov <egor-gorbunov-2017@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.11"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
redis = "^5.2.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
aioredis = "^2.0.1"
apscheduler = "^3.11.0"
celery = {extras = ["async"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
